Fixed alignment of main wrapper. Changed margin to padding

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1839,14 +1839,14 @@ footer .footer2 .widget.profile form {
 
 @media only screen and (min-width: 1140px) {
   .wrapper {
-    width: 960px; /* 1140px - 10% for margins */
-    margin: 15px;
+    width: 960px;
+    padding: 15px auto;
   }
 }
 
 @media only screen and (max-width: 480px) {
   .wrapper {
-    margin: 10px 10px 0 10px;
+    padding: 10px 10px 0 10px;
   }
 }
 
